@@ -1,0 +1,12 @@
+DEFINED_PHASES=install setup
+DESCRIPTION=visualize logs and time-stamped data
+EAPI=5
+HOMEPAGE=http://www.elasticsearch.org/overview/kibana/
+KEYWORDS=~amd64
+LICENSE=Apache-2.0
+RDEPEND=>=app-misc/elasticsearch-1.4.4
+RESTRICT=strip
+SLOT=0
+SRC_URI=https://download.elasticsearch.org/kibana/kibana/kibana-4.0.2-linux-x64.tar.gz
+_eclasses_=user	f54e098dd38ba1c0847a13e685b87747
+_md5_=f4de93fd6389c9c6822a1e78cc652541
